fix invalid ensureIndex crashing server SERVER-388

Conflicts:

	db/pdfile.cpp
	jstests/indexapi.js